--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,10 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install coveralls
 # command to run tests
 script:
-    nosetests 
+    nosetests --cover-package=project --with-coverage
 # coveralls
-# after_success:
-#     coveralls
+after_success:
+    coveralls
