--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - pip install coveralls
 # command to run tests
 script:
-    
+  python FakeName.py    
 # coveralls
 after_success:
     coveralls
